# ONVIF_event_server

./: CMakeLists.txt  LICENSE  ReadMe.txt
WS/: TopicSet.xml  b-2.xsd  bf-2.xsd  customTypes.h  event.wsdl  metadatastream.xsd  onvif.xsd  onvifFull.h  sensors.xsd  struct_timeval.h  ws-discovery.wsdl  ws-discovery.xsd
cmake/: GSOAPConfig.cmake
gSoap/: onvif.h  onvifDiscovery.nsmap  soap.nsmap  soapC_001.cpp  soapC_002.cpp  soapC_003.cpp  soapC_004.cpp  soapC_005.cpp  soapC_006.cpp  soapC_007.cpp  soapC_008.cpp  soapC_009.cpp  soapC_010.cpp  soapC_011.cpp  soapC_012.cpp  soapC_013.cpp  soapCreatePullPointBindingService.cpp  soapCreatePullPointBindingService.h  soapDeviceBindingService.cpp  soapDeviceBindingService.h  soapEventBindingService.cpp  soapEventBindingService.h  soapNotificationConsumerBindingService.cpp  soapNotificationConsumerBindingService.h  soapNotificationProducerBindingService.cpp  soapNotificationProducerBindingService.h  soapPausableSubscriptionManagerBindingService.cpp  soapPausableSubscriptionManagerBindingService.h  soapPullPointBindingService.cpp  soapPullPointBindingService.h  soapPullPointSubscriptionBindingService.cpp  soapPullPointSubscriptionBindingService.h  soapService.cpp  soapService.h  soapStub.h  soapSubscriptionManagerBindingService.cpp  soapSubscriptionManagerBindingService.h  soapdefs.h  stdsoap2.cpp  stdsoap2.h  (+3 more)
keygen/: CMakeLists.txt  keygen.cpp
primitives/: CMakeLists.txt  Config.cpp  Config.h  Logger.h
resource/: settings.json  sphincsLogo.txt
scripts/: SphinxDetectors_d  led_of  postinst  prerm  synctime
src/: AuthorisationHolder.cpp  AuthorisationHolder.h  Device.cpp  Device.h  Event.cpp  Event.h  EventReader.cpp  EventReader.h  GPIOController.cpp  GPIOController.h  LicenseChecker.cpp  LicenseChecker.h  OnvifServer.cpp  OnvifServer.h  PullPointSubscription.cpp  PullPointSubscription.h  RealTimeClock.cpp  RealTimeClock.h  SerialController.cpp  SerialController.h  SoapHelpers.cpp  SoapHelpers.h  SubscriptionController.cpp  SubscriptionController.h  SubscriptionManager.cpp  SubscriptionManager.h  main.cpp  md5Util.h
sysinfo/: CMakeLists.txt  sysinfo.cpp  sysinfo.h
